# Zig-Bazel-Sandbox

./: .bazelrc  BUILD.bazel  MODULE.bazel  README.md  zig-wrapper.sh
src/: main.zig
src/utils/: hello.zig
